<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiListener</string>
    <string name="action_settings">Settings</string>
    <string name="port">Port</string>
    <string name="running">Running</string>
    <string name="status">Status</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="playing_listenin_at_port">Playing! Listening at port: </string>
    <string name="paused_listenin_at_port">Paused! Listening at port: </string>
    <string name="stopped">Stopped!</string>
    <string name="tap_to_open">Tap to open!</string>
    <string name="not_supported">Settings are not supported by this device!</string>
    

</resources>
